[package]
name = "dumle"
version = "0.1.0"
authors = ["Axel Forsman <axelsfor@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
lis = { path = "../lis" }
wasm-bindgen = "0.2.39"

[dependencies.web-sys]
version = "0.3.16"
features = ["Document", "Element", "HtmlElement", "HtmlCollection", "Node", "Text", "Window", "EventTarget"]
