[package]
name = "dumle"
version = "0.1.0"
authors = ["Axel Forsman <axelsfor@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
lis = { path = "../lis" }
wasm-bindgen = "0.2.42"

[dependencies.web-sys]
version = "0.3.19"
features = ["Document", "Element", "Node", "Text", "Window", "Event", "EventTarget"]
