[package]
name = "example"
version = "0.1.0"
authors = ["Axel Forsman <axelsfor@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.39"
dumle = { path = ".." }
dumle-macro = { path = "../macro" }

[dependencies.web-sys]
version = "0.3.16"
features = [
  "console",
  "Document",
  "Event",
  "EventTarget",
  "HtmlElement",
  "MouseEvent",
  "Node",
  "Window",
]
