[package]
name = "example"
version = "0.1.0"
authors = ["Axel Forsman <axelsfor@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.42"
dumle = { path = ".." }
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.19"
features = [
  "console",
  "Document",
  "Event",
  "EventTarget",
  "HtmlElement",
  "MouseEvent",
  "Node",
  "Window",
]
